--- a/index.html
+++ b/index.html
@@ -58,26 +58,23 @@
 <p style="text-align: justify;">headsets such as the Oculus Quest, HTC Vive, or Valve Index. This version supports</p>
 <p style="text-align: justify;">real-time interaction, where users can walk through galaxies and observe astronomical data</p>
 <p style="text-align: justify;">with full immersion.</p>
-<p style="text-align: justify;">&lt;a id="vr-specs"&gt;&lt;/a&gt;</p>
-<p style="text-align: justify;">&lt;a id="vr-specs"&gt;&lt;/a&gt;</p>
+
 </section>
 <section id="versions">
 <h2>MGI Versions</h2>
 </section>
 <section id="vr-specs">
 <h2>VR Specifications</h2>
-<p style="text-align: justify;">:</p>
-<p style="text-align: justify;">● A frame rate of at least 90Hz is required for smooth performance.</p>
-<p style="text-align: justify;">● The prototype achieved a frame rate of 120Hz consistently, ensuring minimal latency</p>
+<p style="text-align: justify;">1. A frame rate of at least 90Hz is required for smooth performance.</p>
+<p style="text-align: justify;">2. The prototype achieved a frame rate of 120Hz consistently, ensuring minimal latency</p>
 <p style="text-align: justify;">and a smooth user experience.</p>
-<p style="text-align: justify;">● Uses OpenXR, a universal API standard that bridges VR and AR platforms.</p>
-<p style="text-align: justify;">• MGI-AR: An augmented reality (AR) version, developed at the University of Portsmouth,</p>
+<p style="text-align: justify;">3.  Uses OpenXR, a universal API standard that bridges VR and AR platforms.</p>
+<p style="text-align: justify;">4.  MGI-AR: An augmented reality (AR) version, developed at the University of Portsmouth,</p>
 <p style="text-align: justify;">suitable for interactive educational and research applications.</p>
 <p style="text-align: justify;">MGI was developed in collaboration with researchers at INAF - Italy.</p>
 <p style="text-align: justify;">For further inquiries, contact David Amuneni at osuhamuneni@gmail.com. A link to a</p>
 <p style="text-align: justify;"><a href="https://youtu.be/Dto6QBzXBbg" target="_blank">MGI Software Demo (YouTube)</a></p>
-<p style="text-align: justify;">&lt;a id="overview"&gt;&lt;/a&gt;</p>
-<p style="text-align: justify;">&lt;a id="overview"&gt;&lt;/a&gt;</p>
+
 </section>
 <section id="overview">
 <h2>Software Overview</h2>
@@ -86,50 +83,44 @@
 <p style="text-align: justify;">understanding of complex multi-wavelength datasets and introduces new possibilities for</p>
 <p style="text-align: justify;">interactive research. Among the suggested tools are features for immersive exploration,</p>
 <p style="text-align: justify;">modification, and interaction with astronomical datasets.</p>
-<p style="text-align: justify;">&lt;a id="features"&gt;&lt;/a&gt;</p>
-<p style="text-align: justify;">&lt;a id="features"&gt;&lt;/a&gt;</p>
+
 </section>
 <section id="features">
 <h2>Key Features and Tools</h2>
-<p style="text-align: justify;">● FITS File Visualization Interface: A tool for visualising FITS files stored in data</p>
+<p style="text-align: justify;">1. FITS File Visualization Interface: A tool for visualising FITS files stored in data</p>
 <p style="text-align: justify;">archives like the Sloan Digital Sky Survey (SDSS), allowing for immersive</p>
 <p style="text-align: justify;">viewing of stellar objects, galaxies, and cosmic structures.</p>
-<p style="text-align: justify;">● Image Manipulation: Tools to manipulate image attributes (e.g., colour</p>
+<p style="text-align: justify;">2.  Image Manipulation: Tools to manipulate image attributes (e.g., colour</p>
 <p style="text-align: justify;">mapping of specific features like density or galaxy age).</p>
 <p style="text-align: justify;">Image manipulation buttons in the GUI.</p>
-<p style="text-align: justify;">● Interactive Tools: Real-time interactive tools for seamless navigation and data</p>
+<p style="text-align: justify;">3.  Interactive Tools: Real-time interactive tools for seamless navigation and data</p>
 <p style="text-align: justify;">exploration, scalable to accommodate many galaxies.</p>
 <p style="text-align: justify;">Input Box for csv files</p>
 <p style="text-align: justify;">VR Navigation in MGI-VR</p>
-<p style="text-align: justify;">● User-Generated Content: Features for adding user-generated content such as</p>
+<p style="text-align: justify;">4.  User-Generated Content: Features for adding user-generated content such as</p>
 <p style="text-align: justify;">descriptive text.</p>
-<p style="text-align: justify;">Code Base and Software Versions</p>
-<p style="text-align: justify;">MGI is an open-source project, with its full source code available on GitHub. Installation</p>
-<p style="text-align: justify;">instructions and dependencies are detailed in the installation and configuration section.</p>
-<p style="text-align: justify;">&lt;a id="requirements"&gt;&lt;/a&gt;</p>
-<p style="text-align: justify;">&lt;a id="requirements"&gt;&lt;/a&gt;</p>
+
 </section>
 <section id="requirements">
 <h2>System Requirements</h2>
 <p style="text-align: justify;">The system requirements for different MGI versions are outlined below:</p>
 <p style="text-align: justify;">MGI-Desktop</p>
-<p style="text-align: justify;">• Windows 10 or later</p>
-<p style="text-align: justify;">• Intel Core i5 or equivalent</p>
-<p style="text-align: justify;">• 8GB RAM</p>
-<p style="text-align: justify;">• NVIDIA GTX 1050 or higher</p>
-<p style="text-align: justify;">• 5GB storage</p>
+<p style="text-align: justify;">1.  Windows 10 or later</p>
+<p style="text-align: justify;">2.  Intel Core i5 or equivalent</p>
+<p style="text-align: justify;">3.  8GB RAM</p>
+<p style="text-align: justify;">4.  NVIDIA GTX 1050 or higher</p>
+<p style="text-align: justify;">5. 5GB storage</p>
 <p style="text-align: justify;">MGI-VR</p>
-<p style="text-align: justify;">• Windows 10 or later</p>
-<p style="text-align: justify;">• Intel Core i7 or equivalent</p>
-<p style="text-align: justify;">• 16GB RAM</p>
-<p style="text-align: justify;">• NVIDIA GTX 1070 or higher</p>
-<p style="text-align: justify;">• 10GB storage</p>
+<p style="text-align: justify;">1.  Windows 10 or later</p>
+<p style="text-align: justify;">2.  Intel Core i7 or equivalent</p>
+<p style="text-align: justify;">3.  16GB RAM</p>
+<p style="text-align: justify;">4.  NVIDIA GTX 1070 or higher</p>
+<p style="text-align: justify;">5.  10GB storage</p>
 <p style="text-align: justify;">MGI-AR</p>
-<p style="text-align: justify;">• Windows 10 Holographic</p>
-<p style="text-align: justify;">• Microsoft HoloLens or compatible device</p>
-<p style="text-align: justify;">• 16GB RAM (32GB recommended)</p>
-<p style="text-align: justify;">&lt;a id="installation"&gt;&lt;/a&gt;</p>
-<p style="text-align: justify;">&lt;a id="installation"&gt;&lt;/a&gt;</p>
+<p style="text-align: justify;">1.  Windows 10 Holographic</p>
+<p style="text-align: justify;">2.  Microsoft HoloLens or compatible device</p>
+<p style="text-align: justify;">3.  16GB RAM (32GB recommended)</p>
+
 </section>
 <section id="installation">
 <h2>Installation and Configuration</h2>
@@ -138,13 +129,13 @@
 <p style="text-align: justify;"><a href="https://github.com/osuhamuneni/MGI-DESKTOP-VR" target="_blank">MGI GitHub Repository</a></p>
 <p style="text-align: justify;">Executable</p>
 <p style="text-align: justify;">To install MGI-Desktop and MGI-VR, follow these steps:</p>
-<p style="text-align: justify;">• Download the appropriate version from the official GitHub repository.</p>
-<p style="text-align: justify;">• To start the software, double-click on the executable MGI-VR file</p>
-<p style="text-align: justify;">• Launch MGI and load FITS files for exploration.</p>
+<p style="text-align: justify;">1. Download the appropriate version from the official GitHub repository.</p>
+<p style="text-align: justify;">2.  To start the software, double-click on the executable MGI-VR file</p>
+<p style="text-align: justify;">3.  Launch MGI and load FITS files for exploration.</p>
 <p style="text-align: justify;">The MGI-AR does not have the built version, as it is built specifically for the CCIXR lab at the</p>
 <p style="text-align: justify;">University of Portsmouth. However, a basic visualiser has been created that can be adopted</p>
 <p style="text-align: justify;">by other AR display screens. The link to the basic visualiser is at</p>
-<p style="text-align: justify;">(https://github.com/osuhamuneni/BASIC-VISUALISER)</p>
+<p style="text-align: justify;"><a href="https://github.com/osuhamuneni/BASIC-VISUALISER"> Basic Visualiser </a></p>
 <p style="text-align: justify;">For advanced users building from source:</p>
 <p style="text-align: justify;">As a Unity-based virtual reality application, MGI-VR requires several setup steps to compile and</p>
 <p style="text-align: justify;">run from source. Currently, due to VR hardware and driver limitations on Unix-based systems,</p>
@@ -201,16 +192,16 @@
 <p style="text-align: justify;">o Under XR Plug-in Management → OpenXR, check that the relevant interaction</p>
 <p style="text-align: justify;">profiles are enabled.</p>
 <p style="text-align: justify;">• Click the Build button and select your destination folder.</p>
-<p style="text-align: justify;">Use of the &lt;a id="config-files"&gt;&lt;/a&gt;</p>
-<p style="text-align: justify;">&lt;a id="config-files"&gt;&lt;/a&gt;</p>
+
 </section>
 <section id="unity-setup">
 <h2>Unity Setup</h2>
 </section>
 <section id="config-files">
 <h2>Configuration Files</h2>
-<p style="text-align: justify;">At the start of the MGI-VR a configuration screen is provide to give options to the user . The user</p>
-<p style="text-align: justify;">can modify this file to customise the software to their needs. The configuration file</p>
+<p style="text-align: justify;">At the start of the MGI-VR a configuration screen is provide to give options to the user . 
+            </p>
+<p style="text-align: justify;">The user can modify this file to customise the software to their needs. The configuration file</p>
 <p style="text-align: justify;">has the following settings that can be modified:</p>
 <p style="text-align: justify;">Colourisation Mode: Colouration is managed through the application of colour mapping or</p>
 <p style="text-align: justify;">colour transfer functions, thereby enabling the customisation of chromatic attributes.</p>
@@ -223,16 +214,14 @@
 <p style="text-align: justify;">Denoising of Galaxies: Denoising of galaxies provides options to empower users to</p>
 <p style="text-align: justify;">prototype specific visualisation types for galaxies, providing a means to determine the</p>
 <p style="text-align: justify;">appearance of galaxies in the scene.</p>
-<p style="text-align: justify;">6. &lt;a id="testing"&gt;&lt;/a&gt;</p>
-<p style="text-align: justify;">&lt;a id="testing"&gt;&lt;/a&gt;</p>
+
 </section>
 <section id="testing">
 <h2>Testing and Deployment</h2>
 <p style="text-align: justify;">:</p>
-<p style="text-align: justify;">o Run unit tests and validate output consistency.</p>
-<p style="text-align: justify;">o Deploy the application for research or interactive use.</p>
-<p style="text-align: justify;">7. &lt;a id="workflows"&gt;&lt;/a&gt;</p>
-<p style="text-align: justify;">&lt;a id="workflows"&gt;&lt;/a&gt;</p>
+<p style="text-align: justify;">1. Run unit tests and validate output consistency.</p>
+<p style="text-align: justify;">2. Deploy the application for research or interactive use.</p>
+
 </section>
 <section id="workflows">
 <h2>Workflows</h2>
@@ -247,8 +236,7 @@
 <p style="text-align: justify;">extend MGI’s functionality or create entirely new tools, this workflow provides full access to</p>
 <p style="text-align: justify;">the MGI framework. Users can modify the C# code to build custom tools or integrate external</p>
 <p style="text-align: justify;">datasets.</p>
-<p style="text-align: justify;">8. &lt;a id="troubleshooting"&gt;&lt;/a&gt;</p>
-<p style="text-align: justify;">&lt;a id="troubleshooting"&gt;&lt;/a&gt;</p>
+
 </section>
 <section id="troubleshooting">
 <h2>Troubleshooting Guide</h2>
@@ -257,16 +245,14 @@
 <p style="text-align: justify;">● Check that the latest version of Microsoft Visual C++ Redistributable is installed.</p>
 <p style="text-align: justify;">● Ensure Unity runtime libraries are properly configured for advanced users building</p>
 <p style="text-align: justify;">from source.</p>
-<p style="text-align: justify;">9. &lt;a id="performance"&gt;&lt;/a&gt;</p>
-<p style="text-align: justify;">&lt;a id="performance"&gt;&lt;/a&gt;</p>
+
 </section>
 <section id="performance">
 <h2>Performance Optimisation</h2>
 <p style="text-align: justify;">● Close unnecessary applications to free up system memory.</p>
 <p style="text-align: justify;">● Lower graphical settings in MGI for improved performance on lower-end hardware.</p>
 <p style="text-align: justify;">● Update GPU drivers to ensure compatibility with rendering requirements.</p>
-<p style="text-align: justify;">3. &lt;a id="errors"&gt;&lt;/a&gt;</p>
-<p style="text-align: justify;">&lt;a id="errors"&gt;&lt;/a&gt;</p>
+
 </section>
 <section id="errors">
 <h2>Common Errors and Fixes</h2>
@@ -275,8 +261,7 @@
 <p style="text-align: justify;">● VR headset not detected: Verify SteamVR or Oculus runtime is running before</p>
 <p style="text-align: justify;">launching MGI.</p>
 <p style="text-align: justify;">● FITS file does not load: Ensure the file format is standard and not corrupted.</p>
-<p style="text-align: justify;">&lt;a id="faq"&gt;&lt;/a&gt;</p>
-<p style="text-align: justify;">&lt;a id="faq"&gt;&lt;/a&gt;</p>
+
 </section>
 <section id="faq">
 <h2>Frequently Asked Questions</h2>
@@ -288,8 +273,7 @@
 <p style="text-align: justify;">feature.</p>
 <p style="text-align: justify;">3. Can I export visualisations as images or videos?</p>
 <p style="text-align: justify;">Yes, MGI allows exporting high-resolution images of visualised galaxies.</p>
-<p style="text-align: justify;">&lt;a id="future"&gt;&lt;/a&gt;</p>
-<p style="text-align: justify;">&lt;a id="future"&gt;&lt;/a&gt;</p>
+
 </section>
 <section id="future">
 <h2>Future Developments</h2>
