--- a/index.html
+++ b/index.html
@@ -49,28 +49,24 @@
 <p style="text-align: justify;">engine technologies and C# programming, the software enables intuitive manipulation and</p>
 <p style="text-align: justify;">exploration of astronomical data.</p>
 <p style="text-align: justify;">The three versions of MGI are:</p>
-<p style="text-align: justify;">• MGI-Desktop: The MGI desktop version provides a fully interactive interface for users to</p>
+<p style="text-align: justify;">1 MGI-Desktop: The MGI desktop version provides a fully interactive interface for users to</p>
 <p style="text-align: justify;">visualise and explore FITS files. This version is ideal for those who want a user-friendly</p>
 <p style="text-align: justify;">platform to access and manipulate multi-wavelength data in a 2D or 3D space.• MGI-VR: A</p>
 <p style="text-align: justify;">virtual reality (VR) version for an immersive experience, allowing astronomers to explore</p>
 <p style="text-align: justify;">galaxies in a 3D space.</p>
-<p style="text-align: justify;">· MGI-VR: The VR version immerses users in a 3D galaxy environment using VR</p>
+<p style="text-align: justify;">2MGI-VR: The VR version immerses users in a 3D galaxy environment using VR</p>
 <p style="text-align: justify;">headsets such as the Oculus Quest, HTC Vive, or Valve Index. This version supports</p>
 <p style="text-align: justify;">real-time interaction, where users can walk through galaxies and observe astronomical data</p>
 <p style="text-align: justify;">with full immersion.</p>
+<p style="text-align: justify;">3.  MGI-AR: An augmented reality (AR) version, developed at the University of Portsmouth,</p>
+<p style="text-align: justify;">suitable for interactive educational and research applications.</p>
 
-</section>
-<section id="versions">
-<h2>MGI Versions</h2>
-</section>
 <section id="vr-specs">
 <h2>VR Specifications</h2>
 <p style="text-align: justify;">1. A frame rate of at least 90Hz is required for smooth performance.</p>
 <p style="text-align: justify;">2. The prototype achieved a frame rate of 120Hz consistently, ensuring minimal latency</p>
 <p style="text-align: justify;">and a smooth user experience.</p>
-<p style="text-align: justify;">3.  Uses OpenXR, a universal API standard that bridges VR and AR platforms.</p>
-<p style="text-align: justify;">4.  MGI-AR: An augmented reality (AR) version, developed at the University of Portsmouth,</p>
-<p style="text-align: justify;">suitable for interactive educational and research applications.</p>
+<p style="text-align: justify;">3. Uses OpenXR, a universal API standard that bridges VR and AR platforms.</p>
 <p style="text-align: justify;">MGI was developed in collaboration with researchers at INAF - Italy.</p>
 <p style="text-align: justify;">For further inquiries, contact David Amuneni at osuhamuneni@gmail.com. A link to a</p>
 <p style="text-align: justify;"><a href="https://youtu.be/Dto6QBzXBbg" target="_blank">MGI Software Demo (YouTube)</a></p>
