--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
 <p style="text-align: justify;">engine technologies and C# programming, the software enables intuitive manipulation and</p>
 <p style="text-align: justify;">exploration of astronomical data.</p>
 <p style="text-align: justify;">The three versions of MGI are:</p>
-<p style="text-align: justify;">1 MGI-Desktop: The MGI desktop version provides a fully interactive interface for users to</p>
+<p style="text-align: justify;">1. MGI-Desktop: The MGI desktop version provides a fully interactive interface for users to</p>
 <p style="text-align: justify;">visualise and explore FITS files. This version is ideal for those who want a user-friendly</p>
 <p style="text-align: justify;">platform to access and manipulate multi-wavelength data in a 2D or 3D space.• MGI-VR: A</p>
 <p style="text-align: justify;">virtual reality (VR) version for an immersive experience, allowing astronomers to explore</p>
 <p style="text-align: justify;">galaxies in a 3D space.</p>
-<p style="text-align: justify;">2MGI-VR: The VR version immerses users in a 3D galaxy environment using VR</p>
+<p style="text-align: justify;">2. MGI-VR: The VR version immerses users in a 3D galaxy environment using VR</p>
 <p style="text-align: justify;">headsets such as the Oculus Quest, HTC Vive, or Valve Index. This version supports</p>
 <p style="text-align: justify;">real-time interaction, where users can walk through galaxies and observe astronomical data</p>
 <p style="text-align: justify;">with full immersion.</p>
